--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-      "outDir": "./dist/",
+      "outDir": "assets/",
       "sourceMap": true,
       "module": "es6",
       "target": "es5",
